Kubernetes/CKA/Networking/Ingress/Lab-1/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2024-12-08T08:49:56Z"
  generation: 1
  name: ingress-wear-watch
  namespace: app-space
  resourceVersion: "1002"
  uid: acbfb4e5-4985-4b7d-8a06-c9d0f0017cbc
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: wear-service
            port:
              number: 8080
        path: /wear
        pathType: Prefix
      - backend:
          service:
            name: video-service
            port:
              number: 8080
        path: /stream
        pathType: Prefix
      - backend:
          service:
            name: food-service
            port:
              number: 8080
        path: /eat
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 172.20.36.22
